# TradingAgents-improved

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  ROADMAP.md  STRATEGY.md  STRATEGY_REFERENCE.md  TASK.md  TODO.md  agent_memory.json  crypto_main.py  pyproject.toml
backtest/: backtest_fib_v1.py  backtest_v10.py  backtest_v11.py  backtest_v12.py  backtest_v13.py  backtest_v14.py  backtest_v15.py  backtest_v16.py  backtest_v17.py  backtest_v17b.py  backtest_v17c.py  backtest_v2.py  backtest_v20.py  backtest_v21.py  backtest_v3.py  backtest_v4.py  backtest_v5.py  backtest_v6.py  backtest_v7.py  backtest_v8.py  backtest_v9.py  engine.py  fetch_data.py  indicators.py  run.py  strategy.py  sweep_v20.py
docs/: ROADMAP.md
logs/: agent_reports_2026-03-01.json  agent_reports_2026-03-02.json  agent_reports_2026-03-03.json  agent_reports_2026-03-04.json  agent_reports_2026-03-05.json  agent_reports_2026-03-06.json  agent_reports_2026-03-07.json  agent_reports_2026-03-08.json  agent_reports_2026-03-09.json  agent_reports_2026-03-10.json  agent_reports_2026-03-11.json  agent_reports_2026-03-12.json  agent_reports_2026-03-13.json  agent_scores.json  analyst_cache.json  audit_2026-03-14.md  daily_review_2026-03-01.json  daily_review_2026-03-02.json  daily_review_2026-03-03.json  daily_review_2026-03-04.json  daily_review_2026-03-05.json  daily_review_2026-03-06.json  daily_review_2026-03-07.json  daily_review_2026-03-08.json  daily_review_2026-03-09.json  daily_review_2026-03-10.json  daily_review_2026-03-11.json  daily_review_2026-03-12.json  executor_state.json  (+12 more)
(+207 files in other folders)
