[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingagents"
version = "0.2.0"
description = "TradingAgents: Multi-Agents LLM Financial Trading Framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=0.3.81,<0.4",
    "backtrader>=1.9.78.123,<2.0",
    "chainlit>=2.5.5,<3.0",
    "langchain-anthropic>=0.3.15,<0.4",
    "langchain-experimental>=0.3.4,<0.4",
    "langchain-google-genai>=2.1.5,<3.0",
    "langchain-openai>=0.3.23,<0.4",
    "langgraph>=0.4.8,<0.5",
    "pandas>=2.3.0,<3.0",
    "parsel>=1.10.0,<2.0",
    "pytz>=2025.2",
    "questionary>=2.1.0,<3.0",
    "rank-bm25>=0.2.2,<0.3",
    "redis>=6.2.0,<7.0",
    "requests>=2.32.4,<3.0",
    "rich>=14.0.0,<15.0",
    "typer>=0.21.0,<1.0",
    "setuptools>=80.9.0",
    "stockstats>=0.6.5,<0.7",
    "tqdm>=4.67.1,<5.0",
    "typing-extensions>=4.14.0",
    "yfinance>=0.2.63,<0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
tradingagents = "cli.main:app"

[tool.setuptools.packages.find]
include = ["tradingagents*", "cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
